--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.0.0-rc.0",
     "@mui/material-nextjs": "^7.0.0-rc.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.81.1",
     "next": "^15.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
