--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/material-nextjs": "^7.0.0-rc.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
+    "@vercel/analytics": "^1.5.0",
     "next": "^15.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
