--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "^15.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
